--- a/cargo.toml
+++ b/cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8"
+serenity = "0.12.4"
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+
+[profile.release]
+#debug = true
 
 [profile.dev.package."*"]
 opt-level = 3
